# veriflow-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  ci.yml
Docs/: 2025-11-26-Kickoff-Meeting.md
client/: Cargo.toml
client/src/: cli.rs  client.rs  config.rs  hashing.rs  main.rs  transfer.rs  ui.rs
common/: Cargo.toml
common/src/: hashing.rs  lib.rs  protocol.rs
docs/: 2025-11-29-Meeting.md  2025-12-03-Meeting.md  2026-03-02-Meeting.md
server/: Cargo.toml
server/src/: config.toml  lib.rs  main.rs  server.rs
