[package]
name = "Veriflow"
version = "0.1.0"
edition = "2021"
description = "A high-performance, asynchronous file transfer CLI built with Rust, Tokio and SHA-256 integrity verification."

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive"] }
common = { version = "0.1.0", path = "../common" }
indicatif = "0.18.3"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
